BuildNetworkSecurityGroup.parameters.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkSecurityGroupsSettings": {
      "value": {
        "name": "sample-subnet",
        "securityRules": [
          {
            "name": "RDPAllow",
            "description": "allow RDP connections",
            "direction": "Inbound",
            "priority": 100,
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "10.0.0.0/24",
            "sourcePortRange": "*",
            "destinationPortRange": "3389",
            "access": "Allow",
            "protocol": "Tcp"
          },
          {
            "name": "HTTPAllow",
            "description": "allow HTTP connections",
            "direction": "Inbound",
            "priority": 200,
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "10.0.1.0/24",
            "sourcePortRange": "*",
            "destinationPortRange": "80",
            "access": "Allow",
            "protocol": "Tcp"
          }
        ]
      }
    },
    "BuildUri": {
      "value": "https://armreference.blob.core.windows.net/build/Microsoft.Network/networkSecurityGroups"
    },
    "url": {
      "value": "https://raw.githubusercontent.com/jeffpatton1971"
    },
    "path": {
      "value": "arm-property-transform-collector"
    },
    "version": {
      "value": "dev"
    }
  }
}
